--- a/dev-python/PyQt/ChangeLog
+++ b/dev-python/PyQt/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/PyQt
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/PyQt/ChangeLog,v 1.87 2007/05/29 17:28:05 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/PyQt/ChangeLog,v 1.88 2007/05/30 20:32:52 gustavoz Exp $
+
+  30 May 2007; Gustavo Zacarias <gustavoz@gentoo.org> PyQt-3.17.ebuild:
+  Stable on sparc wrt #174413
 
   29 May 2007; Raúl Porcel <armin76@gentoo.org> PyQt-3.17.ebuild:
   alpha/x86 stable wrt #174413
