--- a/x11-libs/gtk-canvas/ChangeLog
+++ b/x11-libs/gtk-canvas/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for x11-libs/gtk-canvas
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk-canvas/ChangeLog,v 1.8 2007/05/29 08:54:36 dberkholz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk-canvas/ChangeLog,v 1.9 2007/05/30 21:58:19 dberkholz Exp $
+
+  30 May 2007; Donnie Berkholz <dberkholz@gentoo.org>;
+  files/0.1.1-as-needed.patch, gtk-canvas-0.1.1-r2.ebuild:
+  Fix --as-needed patch to use dependencies instead of just linking. Move
+  WANT_AUTOMAKE placement so that autotools.eclass gets dependencies
+  automatically. Add missing dep on media-libs/imlib, which gnome-libs used to
+  pull in.
 
 *gtk-canvas-0.1.1-r2 (29 May 2007)
 
