--- a/dev-python/gnome-python-extras/ChangeLog
+++ b/dev-python/gnome-python-extras/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/gnome-python-extras
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/gnome-python-extras/ChangeLog,v 1.50 2007/05/30 12:38:30 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/gnome-python-extras/ChangeLog,v 1.51 2007/05/31 00:44:17 ranger Exp $
+
+  31 May 2007; Brent Baude <ranger@gentoo.org>
+  gnome-python-extras-2.14.2.ebuild:
+  Marking gnome-python-extras-2.14.2 ppc64 stable for bug #171107
 
   30 May 2007; Raúl Porcel <armin76@gentoo.org>
   gnome-python-extras-2.14.2-r1.ebuild:
