--- a/gnome-base/control-center/ChangeLog
+++ b/gnome-base/control-center/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/control-center
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/control-center/ChangeLog,v 1.231 2007/05/30 12:41:24 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/control-center/ChangeLog,v 1.232 2007/05/31 00:45:42 ranger Exp $
+
+  31 May 2007; Brent Baude <ranger@gentoo.org> control-center-2.16.3.ebuild:
+  Marking control-center-2.16.3 ppc64 stable for bug #171107
 
   30 May 2007; Raúl Porcel <armin76@gentoo.org>
   control-center-2.16.3.ebuild:
