--- a/app-arch/bsdtar/ChangeLog
+++ b/app-arch/bsdtar/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/bsdtar
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/bsdtar/ChangeLog,v 1.68 2007/05/27 15:28:28 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/bsdtar/ChangeLog,v 1.69 2007/05/31 01:39:33 dang Exp $
+
+  31 May 2007; Daniel Gryniewicz <dang@gentoo.org> bsdtar-2.0.31.ebuild:
+  Marked stable on amd64 for bug #180017
 
 *bsdtar-2.2.3 (27 May 2007)
 
