--- a/app-misc/pastemecli/ChangeLog
+++ b/app-misc/pastemecli/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/pastemecli
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/pastemecli/ChangeLog,v 1.3 2005/03/22 16:09:50 kloeri Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-misc/pastemecli/ChangeLog,v 1.4 2007/05/31 02:07:43 kloeri Exp $
+
+  31 May 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
+  Remove myself as I'm retiring.
 
   22 Mar 2005; Bryan Østergaard <kloeri@gentoo.org> pastemecli-0.8.ebuild:
   Add ~alpha keyword.
