--- a/gnome-extra/nautilus-cd-burner/ChangeLog
+++ b/gnome-extra/nautilus-cd-burner/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/nautilus-cd-burner
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/nautilus-cd-burner/ChangeLog,v 1.163 2007/05/31 00:25:04 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/nautilus-cd-burner/ChangeLog,v 1.164 2007/05/31 03:45:04 dang Exp $
+
+  31 May 2007; Daniel Gryniewicz <dang@gentoo.org>
+  nautilus-cd-burner-2.16.3.ebuild:
+  Marked stable on amd64 for bug #171107
 
   31 May 2007; Brent Baude <ranger@gentoo.org>
   nautilus-cd-burner-2.16.3.ebuild:
