--- a/gnome-base/control-center/ChangeLog
+++ b/gnome-base/control-center/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/control-center
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/control-center/ChangeLog,v 1.232 2007/05/31 00:45:42 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/control-center/ChangeLog,v 1.233 2007/05/31 03:53:34 dang Exp $
+
+  31 May 2007; Daniel Gryniewicz <dang@gentoo.org>
+  control-center-2.16.3.ebuild:
+  Marked stable on amd64 for bug #171107
 
   31 May 2007; Brent Baude <ranger@gentoo.org> control-center-2.16.3.ebuild:
   Marking control-center-2.16.3 ppc64 stable for bug #171107
