--- a/xfce-extra/xfce4-time-out/ChangeLog
+++ b/xfce-extra/xfce4-time-out/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for xfce-extra/xfce4-time-out
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-time-out/ChangeLog,v 1.6 2007/05/23 17:13:15 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-time-out/ChangeLog,v 1.7 2007/05/31 07:28:42 drac Exp $
+
+*xfce4-time-out-0.1.0-r1 (31 May 2007)
+
+  31 May 2007; Samuli Suominen <drac@gentoo.org>
+  +files/xfce4-time-out-0.1.0-save-settings.patch,
+  -xfce4-time-out-0.1.0.ebuild, +xfce4-time-out-0.1.0-r1.ebuild:
+  Patch from upstream trunk to save settings on enable.
 
   23 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
   xfce4-time-out-0.1.0.ebuild:
