--- a/sys-apps/hdparm/ChangeLog
+++ b/sys-apps/hdparm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/hdparm
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hdparm/ChangeLog,v 1.107 2007/06/14 12:53:49 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hdparm/ChangeLog,v 1.108 2007/06/14 13:36:28 armin76 Exp $
+
+  14 Jun 2007; Raúl Porcel <armin76@gentoo.org> hdparm-7.3.ebuild:
+  alpha/ia64/x86 stable wrt #181965
 
   14 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org> hdparm-7.3.ebuild:
   Stable on sparc wrt #181965
