--- a/dev-java/sun-jce-bin/ChangeLog
+++ b/dev-java/sun-jce-bin/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-java/sun-jce-bin
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jce-bin/ChangeLog,v 1.5 2006/12/13 01:32:18 caster Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jce-bin/ChangeLog,v 1.6 2007/06/14 13:47:04 betelgeuse Exp $
+
+  14 Jun 2007; Petteri Räty <betelgeuse@gentoo.org>
+  sun-jce-bin-1.5.0.ebuild:
+  Don't inherit java-pkg-2 or eutils because neither is used.
+  Remove app-arch/unzip from RDEPEND.
 
 *sun-jce-bin-1.6.0 (13 Dec 2006)
 
