--- a/media-gfx/jpeg2ps/ChangeLog
+++ b/media-gfx/jpeg2ps/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/jpeg2ps
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/jpeg2ps/ChangeLog,v 1.18 2007/04/30 22:02:28 genone Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/jpeg2ps/ChangeLog,v 1.19 2007/06/14 13:50:17 gustavoz Exp $
+
+  14 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org> jpeg2ps-1.9-r1.ebuild:
+  Keyworded ~sparc wrt #182027
 
   30 Apr 2007; Marius Mauch <genone@gentoo.org> jpeg2ps-1.9.ebuild,
   jpeg2ps-1.9-r1.ebuild:
