--- a/xfce-extra/xfce4-time-out/ChangeLog
+++ b/xfce-extra/xfce4-time-out/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for xfce-extra/xfce4-time-out
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-time-out/ChangeLog,v 1.9 2007/06/09 13:16:18 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-time-out/ChangeLog,v 1.10 2007/06/14 13:56:49 jer Exp $
+
+  14 Jun 2007; Jeroen Roovers <jer@gentoo.org>
+  xfce4-time-out-0.1.0-r1.ebuild:
+  Marked ~hppa (bug #181785).
 
   09 Jun 2007; nixnut <nixnut@gentoo.org> xfce4-time-out-0.1.0-r1.ebuild:
   Added ~ppc keyword
