Nowadays sqlite3 should be pretty much stable, so use it external again. (both 1.4.6 pre-release snapshot and live svn). Package-Manager: portage-2.1.2.9

--- a/media-sound/amarok/ChangeLog
+++ b/media-sound/amarok/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for media-sound/amarok
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/amarok/ChangeLog,v 1.219 2007/06/14 13:30:24 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/amarok/ChangeLog,v 1.220 2007/06/14 14:01:56 flameeyes Exp $
+
+*amarok-1.4.9999-r1 (14 Jun 2007)
+*amarok-1.4.6_pre20070608-r1 (14 Jun 2007)
+
+  14 Jun 2007; Diego Pettenò <flameeyes@gentoo.org>
+  +amarok-1.4.6_pre20070608-r1.ebuild, -amarok-1.4.9999.ebuild,
+  +amarok-1.4.9999-r1.ebuild:
+  Nowadays sqlite3 should be pretty much stable, so use it external again.
+  (both 1.4.6 pre-release snapshot and live svn).
 
 *amarok-1.4.9999 (14 Jun 2007)
 
