--- a/dev-python/numpy/ChangeLog
+++ b/dev-python/numpy/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/numpy
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/numpy/ChangeLog,v 1.26 2007/06/14 13:52:44 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/numpy/ChangeLog,v 1.27 2007/06/14 14:06:02 jer Exp $
+
+  14 Jun 2007; Jeroen Roovers <jer@gentoo.org> numpy-1.0.3.ebuild:
+  Marked ~hppa (bug #181888).
 
   14 Jun 2007; Raúl Porcel <armin76@gentoo.org> numpy-1.0.3.ebuild:
   Add ~alpha/~ia64 wrt #181888
