--- a/dev-python/pycdf/ChangeLog
+++ b/dev-python/pycdf/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-python/pycdf
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pycdf/ChangeLog,v 1.8 2007/02/24 16:04:43 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pycdf/ChangeLog,v 1.9 2007/06/14 14:10:47 lucass Exp $
+
+*pycdf-0.6.3 (14 Jun 2007)
+
+  14 Jun 2007; Lukasz Strzygowski <lucass@gentoo.org> -pycdf-0.5.2.ebuild,
+  -pycdf-0.6.2_rc1.ebuild, +pycdf-0.6.3.ebuild:
+  Version bump, dropped old versions (bug #181778). Renamed doc use-flag to
+  examples.
 
   24 Feb 2007; Steve Dibb <beandog@gentoo.org> pycdf-0.5.2.ebuild,
   pycdf-0.6.2_rc1.ebuild:
