--- a/x11-libs/cairo/ChangeLog
+++ b/x11-libs/cairo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/cairo
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/cairo/ChangeLog,v 1.129 2007/06/14 13:07:42 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/cairo/ChangeLog,v 1.130 2007/06/14 14:21:20 dang Exp $
+
+  14 Jun 2007; Daniel Gryniewicz <dang@gentoo.org> cairo-1.4.6.ebuild:
+  Marked stable on amd64 for bug #176367
 
   14 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org> cairo-1.4.6.ebuild:
   Stable on sparc wrt #176367
