--- a/net-proxy/dante/ChangeLog
+++ b/net-proxy/dante/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-proxy/dante
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-proxy/dante/ChangeLog,v 1.38 2007/06/14 07:06:34 mrness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-proxy/dante/ChangeLog,v 1.39 2007/06/14 14:52:02 armin76 Exp $
+
+  14 Jun 2007; Raúl Porcel <armin76@gentoo.org> dante-1.1.19-r1.ebuild:
+  alpha stable wrt #174115
 
   14 Jun 2007; Alin Năstac <mrness@gentoo.org> dante-1.1.19-r1.ebuild:
   Disable hack for 2.0 kernels (bug #174115 comment #8).
