--- a/x11-libs/gtkglext/ChangeLog
+++ b/x11-libs/gtkglext/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/gtkglext
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtkglext/ChangeLog,v 1.61 2007/05/02 17:45:51 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtkglext/ChangeLog,v 1.62 2007/06/14 15:07:53 drac Exp $
+
+  14 Jun 2007; Samuli Suominen <drac@gentoo.org> gtkglext-1.2.0.ebuild:
+  Keyword arm for bug 176517.
 
   02 May 2007; Jeroen Roovers <jer@gentoo.org> gtkglext-1.2.0.ebuild:
   Marked ~hppa (bug #176517).
