--- a/dev-util/git/ChangeLog
+++ b/dev-util/git/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/git
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/git/ChangeLog,v 1.202 2007/06/04 22:15:07 ferdy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/git/ChangeLog,v 1.203 2007/06/14 15:26:27 jer Exp $
+
+  14 Jun 2007; Jeroen Roovers <jer@gentoo.org> git-1.5.1.6.ebuild:
+  Stable for HPPA (bug #179245).
 
 *git-1.5.2.1 (04 Jun 2007)
 
