--- a/dev-python/pygtkglext/ChangeLog
+++ b/dev-python/pygtkglext/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pygtkglext
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pygtkglext/ChangeLog,v 1.25 2007/05/20 16:00:26 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pygtkglext/ChangeLog,v 1.26 2007/06/14 15:30:24 drac Exp $
+
+  14 Jun 2007; Samuli Suominen <drac@gentoo.org> pygtkglext-1.1.0.ebuild:
+  Keyword arm for bug 176517.
 
   20 May 2007; Raúl Porcel <armin76@gentoo.org> pygtkglext-1.1.0.ebuild:
   Add ~alpha wrt #176517
