--- a/net-p2p/ghostwhitecrab/ChangeLog
+++ b/net-p2p/ghostwhitecrab/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-p2p/ghostwhitecrab
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/ghostwhitecrab/ChangeLog,v 1.12 2007/06/12 15:37:52 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/ghostwhitecrab/ChangeLog,v 1.13 2007/06/14 15:30:35 jer Exp $
+
+  14 Jun 2007; Jeroen Roovers <jer@gentoo.org> ghostwhitecrab-0.9.9.ebuild:
+  Stable for HPPA (bug #181775).
 
   12 Jun 2007; Raúl Porcel <armin76@gentoo.org>
   ghostwhitecrab-0.9.9.ebuild:
