--- a/sci-libs/itpp/ChangeLog
+++ b/sci-libs/itpp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-libs/itpp
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/itpp/ChangeLog,v 1.41 2007/06/11 12:21:05 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/itpp/ChangeLog,v 1.42 2007/06/14 15:36:20 angelos Exp $
+
+  14 Jun 2007; Christoph Mende <angelos@gentoo.org> itpp-3.10.10.ebuild:
+  Stable on amd64 wrt bug 181252
 
   11 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org> itpp-3.10.10.ebuild:
   Stable on sparc wrt #181252
