--- a/sys-apps/pciutils/ChangeLog
+++ b/sys-apps/pciutils/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/pciutils
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pciutils/ChangeLog,v 1.103 2007/06/01 16:28:25 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pciutils/ChangeLog,v 1.104 2007/06/14 16:59:24 armin76 Exp $
+
+  14 Jun 2007; Raúl Porcel <armin76@gentoo.org> pciutils-2.2.4-r3.ebuild:
+  alpha/ia64 stable wrt #180554
 
   01 Jun 2007; Peter Weller <welp@gentoo.org> pciutils-2.2.4-r3.ebuild:
   ~amd64'd again due to zlib breakage.
