--- a/dev-db/sqlite/ChangeLog
+++ b/dev-db/sqlite/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/sqlite
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.148 2007/06/14 15:44:06 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.149 2007/06/14 17:11:10 armin76 Exp $
+
+  14 Jun 2007; Raúl Porcel <armin76@gentoo.org> sqlite-3.3.17.ebuild:
+  alpha/ia64/x86 stable wrt #182013
 
   14 Jun 2007; Jeroen Roovers <jer@gentoo.org> sqlite-3.3.17.ebuild:
   Stable for HPPA (bug #182013).
