--- a/gnome-extra/evolution-data-server/ChangeLog
+++ b/gnome-extra/evolution-data-server/ChangeLog
@@ -1,6 +1,17 @@
 # ChangeLog for gnome-extra/evolution-data-server
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/evolution-data-server/ChangeLog,v 1.124 2007/06/02 03:27:37 leio Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/evolution-data-server/ChangeLog,v 1.125 2007/06/14 17:28:11 dang Exp $
+
+*evolution-data-server-1.10.1-r3 (14 Jun 2007)
+*evolution-data-server-1.8.3-r5 (14 Jun 2007)
+*evolution-data-server-1.6.2-r1 (14 Jun 2007)
+
+  14 Jun 2007; Daniel Gryniewicz <dang@gentoo.org>
+  +files/evolution-data-server-1.10.1-imap-overflow.patch,
+  +evolution-data-server-1.6.2-r1.ebuild,
+  +evolution-data-server-1.8.3-r5.ebuild,
+  +evolution-data-server-1.10.1-r3.ebuild:
+  Add fix for IMAP overflow; bug #182011
 
   02 Jun 2007; <leio@gentoo.org> -evolution-data-server-1.8.2.ebuild,
   -evolution-data-server-1.8.3.ebuild,
