--- a/media-libs/libexif/ChangeLog
+++ b/media-libs/libexif/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libexif
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libexif/ChangeLog,v 1.83 2007/06/14 13:14:44 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libexif/ChangeLog,v 1.84 2007/06/14 17:43:25 dertobi123 Exp $
+
+  14 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  libexif-0.6.16.ebuild:
+  ppc stable, bug #181922
 
   14 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org> libexif-0.6.16.ebuild:
   Stable on sparc wrt security #181922
