--- a/net-misc/dhcdbd/ChangeLog
+++ b/net-misc/dhcdbd/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/dhcdbd
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcdbd/ChangeLog,v 1.4 2007/05/15 20:31:15 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcdbd/ChangeLog,v 1.5 2007/06/14 17:51:24 steev Exp $
+
+*dhcdbd-2.8 (14 Jun 2007)
+
+  14 Jun 2007; Steev Klimaszewski <steev@gentoo.org> +dhcdbd-2.8.ebuild:
+  New upstream release, closes bug #182033. Thanks to Tim Harder
+  <thorium90@gmail.com> for reporting.
 
   15 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
   add <herd>no-herd</herd>
