--- a/xfce-base/xfce4-extras/ChangeLog
+++ b/xfce-base/xfce4-extras/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for xfce-base/xfce4-extras
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-extras/ChangeLog,v 1.68 2007/06/14 11:24:14 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-extras/ChangeLog,v 1.69 2007/06/14 18:16:27 drac Exp $
+
+*xfce4-extras-4.4.1-r1 (14 Jun 2007)
+
+  14 Jun 2007; Samuli Suominen <drac@gentoo.org>
+  +xfce4-extras-4.4.1-r1.ebuild:
+  Revision bump for new plug-in.
 
   14 Jun 2007; Raúl Porcel <armin76@gentoo.org> xfce4-extras-4.4.1.ebuild:
   alpha stable
