--- a/app-shells/zsh/ChangeLog
+++ b/app-shells/zsh/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-shells/zsh
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/zsh/ChangeLog,v 1.112 2007/05/07 06:51:11 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/zsh/ChangeLog,v 1.113 2007/06/14 18:16:33 armin76 Exp $
+
+  14 Jun 2007; Raúl Porcel <armin76@gentoo.org> zsh-4.3.2-r2.ebuild:
+  alpha stable wrt #168320
 
   07 May 2007; Mamoru KOMACHI <usata@gentoo.org> files/zprofile,
   -zsh-4.3.2-r1.ebuild:
