--- a/dev-libs/apr-util/ChangeLog
+++ b/dev-libs/apr-util/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/apr-util
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr-util/ChangeLog,v 1.80 2007/06/13 17:16:01 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr-util/ChangeLog,v 1.81 2007/06/14 18:33:25 angelos Exp $
+
+  14 Jun 2007; Christoph Mende <angelos@gentoo.org> apr-util-1.2.8.ebuild:
+  Stable on amd64 wrt bug 178264
 
   13 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org> apr-util-1.2.8.ebuild:
   Stable on sparc wrt #178264
