--- a/net-misc/neon/ChangeLog
+++ b/net-misc/neon/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/neon
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/neon/ChangeLog,v 1.84 2007/06/13 17:13:43 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/neon/ChangeLog,v 1.85 2007/06/14 18:35:00 angelos Exp $
+
+  14 Jun 2007; Christoph Mende <angelos@gentoo.org> neon-0.26.3.ebuild:
+  Stable on amd64 wrt bug 178264
 
   13 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org> neon-0.26.3.ebuild:
   Stable on sparc wrt #178264
