--- a/dev-util/subversion/ChangeLog
+++ b/dev-util/subversion/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/subversion
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.260 2007/06/14 17:46:11 phreak Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.261 2007/06/14 18:37:30 angelos Exp $
+
+  14 Jun 2007; Christoph Mende <angelos@gentoo.org>
+  subversion-1.3.2-r4.ebuild:
+  Stable on amd64 wrt bug 178264
 
 *subversion-1.4.4 (14 Jun 2007)
 
