--- a/app-editors/emacs-cvs/ChangeLog
+++ b/app-editors/emacs-cvs/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-editors/emacs-cvs
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-cvs/ChangeLog,v 1.137 2007/06/14 18:27:35 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-cvs/ChangeLog,v 1.138 2007/06/14 18:53:24 ulm Exp $
+
+  14 Jun 2007; Ulrich Mueller <ulm@gentoo.org>
+  +files/emacs-cvs-temacs-prerequisite.patch, emacs-cvs-23.0.0-r6.ebuild:
+  Fix "temacs: command not found" build problem.
 
   14 Jun 2007; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-22.1.50.ebuild:
   Skip Xaw3d headers patch since it was applied upstream.
