--- a/net-www/mod_auth_pam/ChangeLog
+++ b/net-www/mod_auth_pam/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-www/mod_auth_pam
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/mod_auth_pam/ChangeLog,v 1.20 2007/05/12 10:57:59 chtekk Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/mod_auth_pam/ChangeLog,v 1.21 2007/06/14 19:42:03 phreak Exp $
+
+  14 Jun 2007; Christian Heim <phreak@gentoo.org> files/apache2.pam:
+  Fixing apache2.pam as pointed out in #155050 (thanks to candrews at
+  integralblue.com).
 
   12 May 2007; Luca Longinotti <chtekk@gentoo.org>
   -files/10_mod_auth_pam_ap1.conf,
