--- a/dev-java/jlex/ChangeLog
+++ b/dev-java/jlex/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/jlex
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jlex/ChangeLog,v 1.11 2007/06/14 14:34:33 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jlex/ChangeLog,v 1.12 2007/06/14 19:44:34 dertobi123 Exp $
+
+  14 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  jlex-1.2.6-r1.ebuild:
+  ppc stable, bug #182030
 
   14 Jun 2007; Petteri Räty <betelgeuse@gentoo.org> jlex-1.2.6-r1.ebuild:
   Use JAVA_PKG_IUSE.
