--- a/sys-apps/memtester/ChangeLog
+++ b/sys-apps/memtester/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/memtester
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/memtester/ChangeLog,v 1.19 2007/04/16 08:03:05 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/memtester/ChangeLog,v 1.20 2007/06/14 19:46:52 dertobi123 Exp $
+
+  14 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  memtester-4.0.5.ebuild:
+  ppc stable, bug #181966
 
   16 Apr 2007; Markus Rothe <corsair@gentoo.org> memtester-4.0.5.ebuild:
   Stable on ppc64
