--- a/x11-wm/blackbox/ChangeLog
+++ b/x11-wm/blackbox/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-wm/blackbox
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/blackbox/ChangeLog,v 1.57 2007/06/14 15:17:57 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/blackbox/ChangeLog,v 1.58 2007/06/14 19:51:33 dertobi123 Exp $
+
+  14 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  blackbox-0.70.1.ebuild:
+  ppc stable, bug #181843
 
   14 Jun 2007; Jeroen Roovers <jer@gentoo.org> blackbox-0.70.1.ebuild:
   Stable for HPPA (bug #181843).
