--- a/app-admin/diradm/ChangeLog
+++ b/app-admin/diradm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/diradm
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/diradm/ChangeLog,v 1.30 2007/06/12 22:01:26 jokey Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/diradm/ChangeLog,v 1.31 2007/06/14 20:06:39 dertobi123 Exp $
+
+  14 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org> diradm-2.9.3.ebuild:
+  ppc stable, bug #181562
 
   12 Jun 2007; Markus Ullmann <jokey@gentoo.org> diradm-2.9.3.ebuild:
   Stable on x86 wrt bug #181562
