--- a/app-cdr/graveman/ChangeLog
+++ b/app-cdr/graveman/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-cdr/graveman
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/graveman/ChangeLog,v 1.45 2007/06/14 03:06:38 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/graveman/ChangeLog,v 1.46 2007/06/14 20:08:16 dertobi123 Exp $
+
+  14 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  -graveman-0.3.12_p5.ebuild, graveman-0.3.12_p5-r1.ebuild:
+  ppc stable, bug #181518
 
   14 Jun 2007; Christoph Mende <angelos@gentoo.org>
   graveman-0.3.12_p5-r1.ebuild:
