--- a/gnome-extra/sensors-applet/ChangeLog
+++ b/gnome-extra/sensors-applet/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/sensors-applet
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/sensors-applet/ChangeLog,v 1.23 2007/06/13 06:21:51 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/sensors-applet/ChangeLog,v 1.24 2007/06/14 20:13:29 dertobi123 Exp $
+
+  14 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  sensors-applet-1.7.12.ebuild:
+  ppc stable, bug #181487
 
   13 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
   sensors-applet-1.7.12.ebuild:
