--- a/sys-apps/pcsc-lite/ChangeLog
+++ b/sys-apps/pcsc-lite/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/pcsc-lite
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcsc-lite/ChangeLog,v 1.41 2007/06/12 14:59:59 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcsc-lite/ChangeLog,v 1.42 2007/06/14 20:15:47 dertobi123 Exp $
+
+  14 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  pcsc-lite-1.4.2.ebuild:
+  ppc stable, bug #181512
 
   12 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org>
   pcsc-lite-1.4.2.ebuild:
