--- a/dev-java/charva/ChangeLog
+++ b/dev-java/charva/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/charva
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/charva/ChangeLog,v 1.11 2007/06/12 11:38:23 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/charva/ChangeLog,v 1.12 2007/06/14 20:32:27 dertobi123 Exp $
+
+  14 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  charva-1.0.1-r1.ebuild:
+  ppc stable, bug #181739
 
   12 Jun 2007; Petteri Räty <betelgeuse@gentoo.org> charva-1.0.1-r1.ebuild:
   Use java-pkg_dojavadoc and add source and examples use flags.
