--- a/net-irc/bnc/ChangeLog
+++ b/net-irc/bnc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-irc/bnc
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/bnc/ChangeLog,v 1.32 2007/06/13 13:00:23 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/bnc/ChangeLog,v 1.33 2007/06/14 20:34:44 dertobi123 Exp $
+
+  14 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org> bnc-2.9.4.ebuild:
+  ppc stable, bug #181754
 
   13 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org> bnc-2.9.4.ebuild:
   Stable on sparc wrt #181754
