--- a/net-irc/ircservices/ChangeLog
+++ b/net-irc/ircservices/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-irc/ircservices
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/ircservices/ChangeLog,v 1.32 2007/06/12 15:23:18 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/ircservices/ChangeLog,v 1.33 2007/06/14 20:38:55 dertobi123 Exp $
+
+  14 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  ircservices-5.0.61.ebuild:
+  ppc stable, bug #181772
 
   12 Jun 2007; Raúl Porcel <armin76@gentoo.org> ircservices-5.0.61.ebuild:
   x86 stable wrt #181772
