--- a/sys-fs/fuse/ChangeLog
+++ b/sys-fs/fuse/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-fs/fuse
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/fuse/ChangeLog,v 1.95 2007/06/13 13:17:43 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/fuse/ChangeLog,v 1.96 2007/06/14 20:47:28 dertobi123 Exp $
+
+  14 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  fuse-2.6.4-r1.ebuild:
+  ppc stable, bug #181412
 
   13 Jun 2007; Christoph Mende <angelos@gentoo.org> fuse-2.6.4-r1.ebuild:
   Stable on amd64 wrt bug 181412
