--- a/app-emulation/xtrs/ChangeLog
+++ b/app-emulation/xtrs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-emulation/xtrs
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/xtrs/ChangeLog,v 1.19 2007/06/14 02:06:49 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/xtrs/ChangeLog,v 1.20 2007/06/14 20:51:09 dertobi123 Exp $
+
+  14 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org> xtrs-4.9c.ebuild:
+  ppc stable, bug #181320
 
   14 Jun 2007; Christoph Mende <angelos@gentoo.org> xtrs-4.9c.ebuild:
   Stable on amd64 wrt bug 181320
