--- a/sys-power/hibernate-script/ChangeLog
+++ b/sys-power/hibernate-script/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-power/hibernate-script
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-power/hibernate-script/ChangeLog,v 1.58 2007/06/12 16:21:14 jokey Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-power/hibernate-script/ChangeLog,v 1.59 2007/06/14 21:00:29 dertobi123 Exp $
+
+  14 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  hibernate-script-1.95-r2.ebuild:
+  ppc stable, bug #180645
 
   12 Jun 2007; Markus Ullmann <jokey@gentoo.org>
   hibernate-script-1.95-r2.ebuild:
