--- a/gnome-extra/sensors-applet/ChangeLog
+++ b/gnome-extra/sensors-applet/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/sensors-applet
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/sensors-applet/ChangeLog,v 1.24 2007/06/14 20:13:29 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/sensors-applet/ChangeLog,v 1.25 2007/06/14 21:01:35 dang Exp $
+
+  14 Jun 2007; Daniel Gryniewicz <dang@gentoo.org>
+  sensors-applet-1.7.12.ebuild:
+  Marked stable on amd64 for bug #181487
 
   14 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
   sensors-applet-1.7.12.ebuild:
