--- a/net-im/silc-server/ChangeLog
+++ b/net-im/silc-server/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-im/silc-server
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/silc-server/ChangeLog,v 1.22 2007/03/20 17:43:33 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/silc-server/ChangeLog,v 1.23 2007/06/14 21:23:39 armin76 Exp $
+
+*silc-server-1.0.4 (14 Jun 2007)
+
+  14 Jun 2007; Raúl Porcel <armin76@gentoo.org> +silc-server-1.0.4.ebuild:
+  Version bump
 
   20 Mar 2007; Raúl Porcel <armin76@gentoo.org> silc-server-1.0.3.ebuild:
   back to ~arch
