--- a/net-analyzer/ntop/ChangeLog
+++ b/net-analyzer/ntop/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/ntop
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ntop/ChangeLog,v 1.56 2007/06/14 02:25:29 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ntop/ChangeLog,v 1.57 2007/06/14 21:56:19 dertobi123 Exp $
+
+  14 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org> ntop-3.2-r3.ebuild:
+  ppc stable, bug #180561
 
   14 Jun 2007; Christoph Mende <angelos@gentoo.org> ntop-3.2-r3.ebuild:
   Stable on amd64 wrt bug 180561
