--- a/dev-perl/Apache-Session/ChangeLog
+++ b/dev-perl/Apache-Session/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Apache-Session
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Apache-Session/ChangeLog,v 1.42 2007/05/05 17:29:44 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Apache-Session/ChangeLog,v 1.43 2007/06/15 02:46:06 mcummings Exp $
+
+*Apache-Session-1.83 (15 Jun 2007)
+
+  15 Jun 2007; Michael Cummings <mcummings@gentoo.org>
+  +Apache-Session-1.83.ebuild:
+  Version bump
 
   05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
   Apache-Session-1.81.ebuild:
