--- a/dev-perl/Pod-Simple/ChangeLog
+++ b/dev-perl/Pod-Simple/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Pod-Simple
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Pod-Simple/ChangeLog,v 1.31 2007/05/05 13:58:44 ian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Pod-Simple/ChangeLog,v 1.32 2007/06/15 03:16:32 mcummings Exp $
+
+  15 Jun 2007; Michael Cummings <mcummings@gentoo.org>
+  Pod-Simple-3.05.ebuild:
+  Marking amd64 stable
 
   05 May 2007; Christian Hartmann <ian@gentoo.org> -Pod-Simple-3.02.ebuild,
   -Pod-Simple-3.03.ebuild:
