--- a/dev-perl/Cairo/ChangeLog
+++ b/dev-perl/Cairo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Cairo
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Cairo/ChangeLog,v 1.29 2007/06/09 14:53:29 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Cairo/ChangeLog,v 1.30 2007/06/15 02:50:13 mcummings Exp $
+
+  15 Jun 2007; Michael Cummings <mcummings@gentoo.org> Cairo-1.04.0.ebuild:
+  Marking amd64 stable
 
   09 Jun 2007; Markus Rothe <corsair@gentoo.org> Cairo-1.04.1.ebuild:
   Added ~ppc64; bug #181400
