--- a/dev-perl/DBI/ChangeLog
+++ b/dev-perl/DBI/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/DBI
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DBI/ChangeLog,v 1.90 2007/06/09 16:16:21 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DBI/ChangeLog,v 1.91 2007/06/15 03:01:27 mcummings Exp $
+
+  15 Jun 2007; Michael Cummings <mcummings@gentoo.org> DBI-1.55.ebuild:
+  Marking amd64 stable
 
   09 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org> DBI-1.54.ebuild:
   ppc stable
