--- a/dev-perl/DBIx-DBSchema/ChangeLog
+++ b/dev-perl/DBIx-DBSchema/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/DBIx-DBSchema
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DBIx-DBSchema/ChangeLog,v 1.23 2007/04/22 12:45:09 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DBIx-DBSchema/ChangeLog,v 1.24 2007/06/15 03:03:11 mcummings Exp $
+
+  15 Jun 2007; Michael Cummings <mcummings@gentoo.org>
+  DBIx-DBSchema-0.32.ebuild:
+  Marking amd64 stable
 
 *DBIx-DBSchema-0.32 (22 Apr 2007)
 
