--- a/dev-perl/Email-Address/ChangeLog
+++ b/dev-perl/Email-Address/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Email-Address
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Address/ChangeLog,v 1.30 2007/04/06 14:37:18 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Address/ChangeLog,v 1.31 2007/06/15 03:05:35 mcummings Exp $
+
+  15 Jun 2007; Michael Cummings <mcummings@gentoo.org>
+  Email-Address-1.88.7.ebuild:
+  Marking amd64 stable
 
 *Email-Address-1.88.7 (06 Apr 2007)
 
