--- a/dev-perl/PDL/ChangeLog
+++ b/dev-perl/PDL/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/PDL
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/PDL/ChangeLog,v 1.67 2007/06/01 04:20:18 kumba Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/PDL/ChangeLog,v 1.68 2007/06/15 03:13:30 mcummings Exp $
+
+  15 Jun 2007; Michael Cummings <mcummings@gentoo.org> PDL-2.4.3-r1.ebuild:
+  Marking amd64 stable
 
   01 Jun 2007; Joshua Kinard <kumba@gentoo.org> PDL-2.4.3.ebuild:
   Stable on mips.
