--- a/dev-perl/POE/ChangeLog
+++ b/dev-perl/POE/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/POE
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/POE/ChangeLog,v 1.71 2007/05/05 17:59:13 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/POE/ChangeLog,v 1.72 2007/06/15 03:18:35 mcummings Exp $
+
+  15 Jun 2007; Michael Cummings <mcummings@gentoo.org> POE-0.99.89.ebuild:
+  Marking amd64 stable
 
   05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> POE-0.99.17.ebuild:
   ppc stable
