--- a/dev-perl/Perl-Critic/ChangeLog
+++ b/dev-perl/Perl-Critic/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Perl-Critic
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Perl-Critic/ChangeLog,v 1.27 2007/06/09 10:11:53 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Perl-Critic/ChangeLog,v 1.28 2007/06/15 03:14:34 mcummings Exp $
+
+  15 Jun 2007; Michael Cummings <mcummings@gentoo.org>
+  Perl-Critic-1.05.1.ebuild:
+  Marking amd64 stable
 
 *Perl-Critic-1.05.3 (09 Jun 2007)
 
