--- a/dev-perl/Set-IntSpan/ChangeLog
+++ b/dev-perl/Set-IntSpan/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Set-IntSpan
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Set-IntSpan/ChangeLog,v 1.21 2007/04/06 20:51:10 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Set-IntSpan/ChangeLog,v 1.22 2007/06/15 03:19:54 mcummings Exp $
+
+  15 Jun 2007; Michael Cummings <mcummings@gentoo.org>
+  Set-IntSpan-1.11.ebuild:
+  Marking amd64 stable
 
 *Set-IntSpan-1.11 (06 Apr 2007)
 
