--- a/dev-perl/config-general/ChangeLog
+++ b/dev-perl/config-general/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/config-general
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/config-general/ChangeLog,v 1.38 2007/05/05 18:13:33 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/config-general/ChangeLog,v 1.39 2007/06/15 02:56:58 mcummings Exp $
+
+  15 Jun 2007; Michael Cummings <mcummings@gentoo.org>
+  config-general-2.33.ebuild:
+  Marking amd64 stable
 
   05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
   config-general-2.32.ebuild:
