cleanup old versions Package-Manager: portage-2.1.3_rc1

--- a/media-sound/quodlibet/ChangeLog
+++ b/media-sound/quodlibet/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/quodlibet
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/quodlibet/ChangeLog,v 1.50 2007/05/13 20:23:15 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/quodlibet/ChangeLog,v 1.51 2007/06/15 06:04:20 aballier Exp $
+
+  15 Jun 2007; Alexis Ballier <aballier@gentoo.org>
+  -files/quodlibet-0.23.1-python25.patch, -quodlibet-0.23.1-r1.ebuild,
+  -quodlibet-0.24.ebuild:
+  cleanup old versions
 
 *quodlibet-1.0 (13 May 2007)
 
