Fixing the usage of ${ROOT}'ed apr/apr-util in src_compile. Package-Manager: portage-2.1.3_rc1

--- a/dev-util/subversion/ChangeLog
+++ b/dev-util/subversion/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/subversion
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.262 2007/06/15 09:04:53 phreak Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.263 2007/06/15 09:09:34 phreak Exp $
+
+  15 Jun 2007; Christian Heim <phreak@gentoo.org>
+  subversion-1.4.3-r1.ebuild, subversion-1.4.4.ebuild:
+  Fixing the usage of ${ROOT}'ed apr/apr-util in src_compile.
 
   15 Jun 2007; Christian Heim <phreak@gentoo.org>
   subversion-1.4.3-r1.ebuild, subversion-1.4.4.ebuild:
