added missing useflag to IUSE Package-Manager: portage-2.1.2.9

--- a/media-libs/libcaptury/ChangeLog
+++ b/media-libs/libcaptury/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libcaptury
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libcaptury/ChangeLog,v 1.1 2007/06/14 14:37:53 trapni Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libcaptury/ChangeLog,v 1.2 2007/06/15 15:30:22 trapni Exp $
+
+  15 Jun 2007; <trapni@gentoo.org> libcaptury-0.3.0_pre200706031.ebuild:
+  added missing useflag to IUSE
 
 *libcaptury-0.3.0_pre200706031 (14 Jun 2007)
 
