--- a/media-libs/libgii/ChangeLog
+++ b/media-libs/libgii/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libgii
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libgii/ChangeLog,v 1.37 2007/06/14 21:09:29 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libgii/ChangeLog,v 1.38 2007/06/16 01:50:26 angelos Exp $
+
+  16 Jun 2007; Christoph Mende <angelos@gentoo.org> libgii-1.0.2.ebuild:
+  Stable on amd64 wrt bug 180569
 
   14 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org> libgii-1.0.2.ebuild:
   ppc stable, bug #180569
